--- a/css/contact.css
+++ b/css/contact.css
@@ -425,4 +425,21 @@ textarea {
         margin-right: 10px;
     }
 
+    /*//////////////////////////log in form/////////////////////////////*/
+
+    .login-form {
+        position: absolute;
+        top: 100%; right: 0;
+        width: 100%;
+        padding: 20px;
+        font-size: 15px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border-radius: 0;
+        display: none;
+        background-color: rgb(225, 231, 249);
+        z-index: 1000;
+    }
 }
