--- a/css/shop.css
+++ b/css/shop.css
@@ -80,6 +80,7 @@ a,
 .active {
     color: rgb(146, 167, 236);
 }
+
 /*////////////////////////////////////////////////////////////////////*/
 #login-btn {
     cursor: pointer;
@@ -512,4 +513,22 @@ h3 {
         margin-right: 10px;
     }
 
+    /*//////////////////////////log in form/////////////////////////////*/
+
+    .login-form {
+        position: absolute;
+        top: 100%;
+        right: 0;
+        width: 100%;
+        padding: 20px;
+        font-size: 15px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border-radius: 0;
+        display: none;
+        background-color: rgb(225, 231, 249);
+        z-index: 1000;
+    }
 }
