--- a/css/services.css
+++ b/css/services.css
@@ -465,7 +465,8 @@ h3 {
 
     .login-form {
         position: absolute;
-        top: 100%; right: 0;
+        top: 100%;
+        right: 0;
         width: 100%;
         padding: 20px;
         font-size: 15px;
