--- a/css/style.css
+++ b/css/style.css
@@ -424,8 +424,9 @@ h3 {
 }
 
 @media only screen and (max-width: 640px) {
-    
-    li[class="img-5"],li[class="img-4"]  {
+
+    li[class="img-5"],
+    li[class="img-4"] {
         display: flex;
     }
 
@@ -604,7 +605,8 @@ h3 {
 
     .login-form {
         position: absolute;
-        top: 100%; right: 0;
+        top: 100%;
+        right: 0;
         width: 100%;
         padding: 20px;
         font-size: 15px;
