--- a/css/contact.css
+++ b/css/contact.css
@@ -429,7 +429,8 @@ textarea {
 
     .login-form {
         position: absolute;
-        top: 100%; right: 0;
+        top: 100%;
+        right: 0;
         width: 100%;
         padding: 20px;
         font-size: 15px;
